--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
 
 		var configuration = Config.environment;
 		if (configuration == 'development') {
-			createLink(Config.url + '/app.css').then(function(){
+			createLink(Config.url + 'app.css').then(function(){
 				return createScript('lib/OpenLayers.min.js');
 			}).then(function(){
 				return createScript('gisatlib/OpenLayers/Geoserver23.js');
@@ -56,7 +56,7 @@
 				return createScript('appde.js');
 			});
 		} else {
-			createLink(Config.url + '/app.css').then(function(){
+			createLink(Config.url + 'app.css').then(function(){
 				return createScript('lib/OpenLayers.min.js');
 			}).then(function(){
 				return createScript('extjs-4.1.3/ext.js');
