urbis style replaced

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
 		</script>
 
 		<link rel="stylesheet" type="text/css" href="__new/styles/jquery-ui.css">
-		<link rel="stylesheet" type="text/css" href="urbis.css">
+		<link rel="stylesheet" type="text/css" href="css/project/urbis.css">
 		<link rel="stylesheet" type="text/css" href="__new/styles/style.css">
 
 		<script type="text/javascript"
