--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,11 @@
 
 	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,800,700">
 	<link rel="stylesheet" type="text/css" href="css/ux/ItemSelector.css">
+
 	<link rel="stylesheet" type="text/css" href="css/app.css">
+	<link rel="stylesheet" type="text/css" href="css/toggles-default.css">
+	<link rel="stylesheet" type="text/css" href="css/toggles.css">
+
 	<link rel="stylesheet" type="text/css" href="extjs-4.1.3/resources/css/ext-all-gray.css">
 	<link rel="stylesheet" type="text/css" href="css/ux/colorpicker.css">
 	<link rel="stylesheet" type="text/css" href="extjs-4.1.3/examples/ux/css/CheckHeader.css">
