--- a/src/index.html
+++ b/src/index.html
@@ -59,9 +59,7 @@
 
 		var configuration = Config.environment;
 		if (configuration == 'development') {
-			createLink(Config.url + 'app.css').then(function(){
-				return createScript('lib/OpenLayers.min.js');
-			}).then(function(){
+			createScript('lib/OpenLayers.min.js').then(function(){
 				return createScript('gisatlib/OpenLayers/Geoserver23.js');
 			}).then(function(){
 				return createScript('extjs-4.1.3/ext-debug.js');
@@ -69,9 +67,7 @@
 				return createScript('appde.js');
 			});
 		} else {
-			createLink(Config.url + 'app.css').then(function(){
-				return createScript('lib/OpenLayers.min.js');
-			}).then(function(){
+			createScript('lib/OpenLayers.min.js').then(function(){
 				return createScript('extjs-4.1.3/ext.js');
 			}).then(function(){
 				return createScript('appde.min.js');
