--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,6 @@
 		<link rel="stylesheet" type="text/css" href="css/components.css">
 		<link rel="stylesheet" type="text/css" href="css/responsive.css" media="screen">
 
-		<link rel="stylesheet" type="text/css" href="__new/styles/jquery-ui.css">
-		<link rel="stylesheet" type="text/css" href="__new/styles/style.css">
-
 		<script type="text/javascript">
 			function createScript(src, dataMain) {
 				return new Promise(function (resolve, reject) {
@@ -63,7 +60,9 @@
 				}).then(function(){
 					return createScript('appde.js');
 				}).then(function(){
-					return createScript('__new/lib/require.js', '__new/app.js');
+					if (Config.toggles.hasNewEvaluationTool){
+						return createScript('__new/lib/require.js', '__new/app.js');
+					}
 				});
 			} else {
 				createScript('lib/OpenLayers.min.js').then(function(){
@@ -71,12 +70,24 @@
 				}).then(function(){
 					return createScript('appde.min.js');
 				}).then(function(){
-					return createScript('__new/lib/require.js', '__new/app.js');
+					if (Config.toggles.hasNewEvaluationTool){
+						return createScript('__new/lib/require.js', '__new/app.js');
+					}
 				});
 			}
 			// load project styles depending on the toggles
+			if(Config.toggles.hasNewEvaluationTool){
+				createLink("__new/styles/jquery-ui.css");
+				createLink("__new/styles/style.css");
+			}
+			if(Config.toggles.isNewDesign){
+				createLink("css/newDesign.css");
+			}
 			if(Config.toggles.isUrbis){
 				createLink("css/project/urbis.css");
+			}
+			if(Config.toggles.isEea){
+				createLink("css/project/eea.css");
 			}
 		</script>
 
