--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
 		<script type="text/javascript" src="config.js"></script>
 		<script type="text/javascript" src="observer.js"></script>
-		<script type="text/javascript" src="themeYearConfParams.js"></script>
+		<script type="text/javascript" src="exchangeParams.js"></script>
 		<script type="text/javascript" src="lib/es6-promise.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,800,700">
