--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,8 @@
 					if (Config.toggles.hasNewEvaluationTool){
 						return createScript('__new/lib/require.js', '__new/app.js');
 					}
+				}).then(function(){
+					return createScript('//maps.google.com/maps/api/js?key=AIzaSyAxGvK1UL21TTafsDGd4p3kiHo-hVBlEKE&v=3.2&sensor=false');
 				});
 			} else {
 				createScript('lib/OpenLayers.min.js').then(function(){
@@ -93,8 +95,8 @@
 			}
 		</script>
 
-		<script type="text/javascript"
-				src="//maps.google.com/maps/api/js?key=AIzaSyAxGvK1UL21TTafsDGd4p3kiHo-hVBlEKE&v=3.2&sensor=false"></script>
+		<!--<script type="text/javascript"-->
+				<!--src="//maps.google.com/maps/api/js?key=AIzaSyAxGvK1UL21TTafsDGd4p3kiHo-hVBlEKE&v=3.2&sensor=false"></script>-->
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 		<script src="lib/Highcharts-3.0.0/js/highcharts.src.js"></script>
