--- a/src/index-for-export.html
+++ b/src/index-for-export.html
@@ -2,38 +2,54 @@
 	<head>
 		<title></title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+		<script type="text/javascript" src="config.js"></script>
+		<script type="text/javascript" src="lib/es6-promise.js"></script>
+
 		<link rel="stylesheet" type="text/css" href="extjs-4.1.3/resources/css/ext-all-gray.css"/>
-		<link rel="stylesheet" type="text/css" href="app.css">
+		<link rel="stylesheet" type="text/css" href="css/app.css">
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-		<script type="text/javascript" src="config.js"></script> <!-- TODO: Move loading into specific class instead if simple dynamic server -->
+
 		<script type="text/javascript">
-			function createScript(src, callback) {
-				callback = callback || function(){};
-				var startupScript = document.createElement("script");
-				startupScript.type = "text/javascript";
-				startupScript.src = src;
-				startupScript.async = 1;
-				startupScript.onload = callback;
-				document.getElementsByTagName('head')[0].appendChild(startupScript);
+			function createScript(src) {
+				return new Promise(function (resolve, reject) {
+					var callback = function () {
+						resolve();
+					};
+					var startupScript = document.createElement("script");
+					startupScript.type = "text/javascript";
+					startupScript.src = src;
+					startupScript.async = 1;
+					startupScript.onload = callback;
+					document.getElementsByTagName('head')[0].appendChild(startupScript);
+
+				});
 			}
 
 			var configuration = Config.environment;
-			if(configuration == 'development') {
-				createScript('devlib/OpenLayers.js');
-				createScript('gisatlib/OpenLayers/Geoserver23.js');
-				createScript('extjs-4.1.3/ext-debug.js');
-				createScript('appde.js');
+			if (configuration == 'development') {
+				createScript('lib/OpenLayers.min.js').then(function(){
+					return createScript('gisatlib/OpenLayers/Geoserver23.js');
+				}).then(function(){
+					return createScript('extjs-4.1.3/ext-debug.js');
+				}).then(function(){
+					return createScript('appde.js');
+				});
 			} else {
-				createScript('lib/OpenLayers.min.js',
-						createScript.bind(this, 'extjs-4.1.3/ext.js',
-								createScript.bind(this, 'appde.min.js', function(){console.log("Successfully loaded.")})));
+				createScript('lib/OpenLayers.min.js').then(function(){
+					return createScript('extjs-4.1.3/ext.js');
+				}).then(function(){
+					return createScript('appde.min.js');
+				});
 			}
 		</script>
+
 		<script type="text/javascript" src="//maps.google.com/maps/api/js?key=AIzaSyAxGvK1UL21TTafsDGd4p3kiHo-hVBlEKE&v=3.2&sensor=false"></script>
 
 		<script src="lib/Highcharts-3.0.0/js/highcharts.src.js"></script>
 		<script src="lib/Highcharts-3.0.0/js/highcharts-more.js"></script>
+		<script src="lib/Highcharts-3.0.0/js/modules/exporting.js"></script>
 		<script type="text/javascript">
 			Config.exportPage = true;
 		</script>
