--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,20 @@
 				}).then(function(){
 					return createScript('appde.js');
 				}).then(function(){
+					// If printing hide wrong parts.
+					if(window.location.toString().indexOf("print") != -1) {
+						Config.exportPage = true;
+						$('#main').hide();
+						$('#loading-mask-shim').hide();
+						$('#loading-mask').hide();
+						$('#loading-screen').hide();
+						$('body').removeClass('intro');
+						$('body').css('background', 'none');
+					} else {
+						$('#rendering').hide();
+						$('#legend').hide();
+					}
+				}).then(function(){
 					if (Config.toggles.hasNewEvaluationTool){
 						return createScript('__new/lib/require.js', '__new/app.js');
 					}
@@ -71,6 +85,20 @@
 					return createScript('extjs-4.1.3/ext.js');
 				}).then(function(){
 					return createScript('appde.min.js');
+				}).then(function(){
+					// If printing hide wrong parts.
+					if(window.location.toString().indexOf("print") != -1) {
+						Config.exportPage = true;
+						$('#main').hide();
+						$('#loading-mask-shim').hide();
+						$('#loading-mask').hide();
+						$('#loading-screen').hide();
+						$('body').removeClass('intro');
+						$('body').css('background', 'none');
+					} else {
+						$('#rendering').hide();
+						$('#legend').hide();
+					}
 				}).then(function(){
 					if (Config.toggles.hasNewEvaluationTool){
 						return createScript('__new/lib/require.js', '__new/app.js');
