Return mising divs.

--- a/src/index.html
+++ b/src/index.html
@@ -130,6 +130,9 @@
 		<script src="lib/Highcharts-3.0.0/js/modules/exporting.js"></script>
 	</head>
 	<body class="intro">
+		<div id="rendering"></div>
+		<div id="legend"></div>
+
 		<script>
 			if (self == top) {
   			var theBody = document.getElementsByTagName('body')[0];
