css: welcome page

--- a/src/index.html
+++ b/src/index.html
@@ -119,6 +119,9 @@
 			if(Config.toggles.isEea){
 				createLink("css/project/eea.css");
 			}
+			if(Config.toggles.isMelodies){
+				createLink("css/project/melodies.css");
+			}
 		</script>
 
 		<script type="text/javascript"
