css: icons, select menu

--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
 			if(Config.toggles.isEea){
 				createLink("css/project/eea.css");
 			}
-			if(Config.toggles.isMelodies){
+			if(Config.toggles.hasOwnProperty("isMelodies") && Config.toggles.isMelodies){
 				createLink("css/project/melodies.css");
 			}
 		</script>
