new style for header - urbis, eea

--- a/src/index.html
+++ b/src/index.html
@@ -355,7 +355,7 @@
 					<div id="toolbar" class="fields-holder">
 						<div class="label">Data Exploration</div>
 						<div class="fields">
-							<div class="group">
+							<div class="group group-scope">
 								<div class="field scope">
 									<div class="label">Scope</div>
 									<div id="app-toolbar-scope" class="widget"></div>
