feature info initial

--- a/src/index.html
+++ b/src/index.html
@@ -401,6 +401,7 @@
 					<div id="widget-container" class="widgets">
 						<div class="placeholders-container">
 						</div>
+						<div id="feature-info" class="widget-button">Info</div>
 					</div>
 					<div class="dataview field">
 						<div id="app-toolbar-share" class="widget"></div>
