for melodies project is the timeline longer + help replaced

--- a/src/index.html
+++ b/src/index.html
@@ -382,19 +382,15 @@
 									<div id="app-toolbar-level-less" class="button"></div>
 									<div id="app-toolbar-level-more" class="button"></div>
 								</div>
+								<div class="label help-label">Help</div>
+								<div class="widget app-toolbar-help">
+									<div id="app-toolbar-contexthelp" class="help-btn"></div>
+									<div id="app-toolbar-webhelp" class="help-btn"></div>
+								</div>
 							</div>
 							<div class="field with-sep year">
 								<div class="label">Year (+/-)</div>
 								<div id="app-toolbar-year" class="widget"></div>
-							</div>
-						</div>
-						<div class="group">
-							<div class="field help">
-								<div class="widget">
-									<div id="app-toolbar-contexthelp" class="help-btn"></div>
-									<div id="app-toolbar-webhelp" class="help-btn"></div>
-									<!-- <a id="app-toolbar-webhelp" href="help/PUMA webtool help.html" target="_blank" title="PUMA WebTool help"></a> -->
-								</div>
 							</div>
 						</div>
 					</div>
