--- a/src/index.html
+++ b/src/index.html
@@ -397,7 +397,8 @@
 					<div id="widget-container" class="widgets">
 						<div class="placeholders-container">
 						</div>
-						<div id="feature-info" class="widget-button">Info</div>
+					</div>
+					<div id="tools-container">
 					</div>
 					<div class="dataview field">
 						<div id="app-toolbar-share" class="widget"></div>
