https://gisat.teamwork.com/#tasks/10594516 Updated links to external site.

--- a/src/help/ScopeNationalUrbanExpansion.html
+++ b/src/help/ScopeNationalUrbanExpansion.html
@@ -59,7 +59,7 @@
 <p class="rvps3"><a name="#chinaExpansion"></a>
 <span class="rvts12">National scope - Urban Expansion in 2000-2010</span></p>
 <p class="rvps9"><span class="rvts18">This analysis provides the view into a built-up area and its population expansion at the country level. </span></p>
-<p class="rvps9"><span class="rvts18">As a source for demonstration of analysis at the national scope, </span><span class="rvts16">urban expansion data</span><span class="rvts18"> provided by </span><a class="rvts19" href="http://www.sage.wisc.edu/people/schneider/schneider.html">Annemarie Schneider</a><span class="rvts18"> from the </span><span class="rvts16">University of Wisconsin-Madison</span><span class="rvts18"> have been used. Aggregated values for administrative units originate from a raster dataset with pixel size 250m, representing results of urban land cover classification of satellite data, namely:</span></p>
+<p class="rvps9"><span class="rvts18">As a source for demonstration of analysis at the national scope, </span><span class="rvts16">urban expansion data</span><span class="rvts18"> provided by </span><a class="rvts19" href="https://nelson.wisc.edu/sage/people/profile.php?p=1523">Annemarie Schneider</a><span class="rvts18"> from the </span><span class="rvts16">University of Wisconsin-Madison</span><span class="rvts18"> have been used. Aggregated values for administrative units originate from a raster dataset with pixel size 250m, representing results of urban land cover classification of satellite data, namely:</span></p>
 <ul style="text-indent: 0px; margin-left: 48px; list-style-position: outside;">
 <li class="rvps11" style="margin-left: 0; text-indent: 0px"><span class="rvts16">UW-MADISON URBAN EXPANSION MAP</span></li>
 </ul>
