--- a/src/help/Modifyingchartspanel.html
+++ b/src/help/Modifyingchartspanel.html
@@ -66,7 +66,7 @@
 <p class="rvps2"><span class="rvts9"><br/></span></p>
 <p class="rvps2"><span class="rvts13">There are also incorporated two non-chart visualization possibilities:</span></p>
 <ul style="text-indent: 0px; margin-left: 0px; list-style-position: inside;">
-<li class="rvps2"><span class="rvts8"> </span><span class="rvts10">outline</span></li>
+	<li class="rvps2"><span class="rvts8"> </span><span class="rvts10"><a class="rvts15" href="Outlines.html">outline</a></span></li>
 <li class="rvps2"><span class="rvts13"> </span><a class="rvts15" href="Snapshots.html##chartSnap">snapshots</a><span class="rvts13"> </span></li>
 </ul>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
