https://gisat.teamwork.com/#tasks/10594516 Updated links to external site.

--- a/src/help/ScopeNationalUrbanExpansioninChi.html
+++ b/src/help/ScopeNationalUrbanExpansioninChi.html
@@ -61,7 +61,7 @@
 <p class="rvps2"><a name="#chinaExpansion"></a>
 <span class="rvts14">National scope - Urban Expansion in China 2000-2010</span></p>
 <p class="rvps5"><span class="rvts13"><br/></span></p>
-<p class="rvps4"><span class="rvts13">As a source for demonstration of analysis on national scope, China </span><span class="rvts14">urban expansion data</span><span class="rvts13"> provided by </span><a class="rvts15" href="http://www.sage.wisc.edu/people/schneider/schneider.html">Annemarie Schneider</a><span class="rvts13"> from </span><span class="rvts14">University of Wisconsin-Madison</span><span class="rvts13"> have been used. These data origins from two different raster datasets with pixel size 250m, representing results of urban and other land cover classifications of satellite data, namely:</span></p>
+<p class="rvps4"><span class="rvts13">As a source for demonstration of analysis on national scope, China </span><span class="rvts14">urban expansion data</span><span class="rvts13"> provided by </span><a class="rvts15" href="https://nelson.wisc.edu/sage/people/profile.php?p=1523">Annemarie Schneider</a><span class="rvts13"> from </span><span class="rvts14">University of Wisconsin-Madison</span><span class="rvts13"> have been used. These data origins from two different raster datasets with pixel size 250m, representing results of urban and other land cover classifications of satellite data, namely:</span></p>
 <ul style="text-indent: 0px; margin-left: 48px; list-style-position: outside;">
 <li class="rvps7" style="margin-left: 0px; text-indent: 0px"><span class="rvts19">UW-MADISON EXPANSION MAP</span></li>
 <li class="rvps7" style="margin-left: 0px; text-indent: 0px"><span class="rvts19">UW-MADISON LAND COVER MAP</span></li>
