https://gisat.teamwork.com/#tasks/10594520 Fix link to the Outlines

--- a/src/help/Modifyingchartpanel.html
+++ b/src/help/Modifyingchartpanel.html
@@ -68,7 +68,7 @@
 <p class="rvps2"><span class="rvts20"><br/></span></p>
 <p class="rvps2"><span class="rvts18">There are also incorporated two non-chart visualization possibilities:</span></p>
 <ul style="text-indent: 0px; margin-left: 0px; list-style-position: inside;">
-<li class="rvps2"><span class="rvts18"> </span><span class="rvts19">outline</span></li>
+<li class="rvps2"><span class="rvts18"> </span><span class="rvts19"><a class="rvts15" href="Outlines.html">outline</a></span></li>
 <li class="rvps2"><span class="rvts18"> </span><a class="rvts19" href="Snapshots.html##chartSnap">snapshots</a><span class="rvts18"> </span></li>
 </ul>
 <p class="rvps2"><span class="rvts18"><br/></span></p>
