Try adding the administration button to the HTML.

--- a/src/index.html
+++ b/src/index.html
@@ -181,6 +181,7 @@
 					<a href="#" class="login">LOG IN</a>
 					<span class="sep"></span>
 					<a href="#" class="signup">SIGN UP</a>
+					<a href="#" class="administration">Administration</a>
 				</div>
 			</div>
 			<div id="content">
