--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
 				createScript('lib/OpenLayers.min.js').then(function(){
 					return createScript('extjs-4.1.3/ext.js');
 				}).then(function(){
-					return createScript('appde.min.js');
+					return createScript('appde.all.js');
 				}).then(function(){
 					if ((Config.toggles.hasOwnProperty("hasNewEvaluationTool") && Config.toggles.hasNewEvaluationTool) ||
 							(Config.toggles.hasOwnProperty("hasNewFeatureInfo") && Config.toggles.hasNewFeatureInfo) ||
