--- a/src/help/PUMA webtool help.html
+++ b/src/help/PUMA webtool help.html
@@ -1,6 +1,4 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
-<html>
-
+﻿<html>
 <head>
 
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
