--- a/src/index.html
+++ b/src/index.html
@@ -175,7 +175,7 @@
 				<ul class="menu">
 					<li id="data-exploration-link"><a href="/tool" class="active">Data exploration</a></li>
 					<li id="downloads-link"><a href="/downloads">Downloads</a></li>
-					<li id="help-link"><a href="/help" target="_blank">Help</a></li>
+					<li id="help-link"><a href="/help-frontoffice/" target="_blank">Help</a></li>
 				</ul>
 				<div class="user">
 					<a href="#" class="login">LOG IN</a>
