update link to download section

--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,7 @@
 				<a href="/" class="home" id="home-link"><span>Home</span></a>
 				<ul class="menu">
 					<li id="data-exploration-link"><a href="/tool" class="active">Data exploration</a></li>
-					<li id="downloads-link"><a href="/downloads">Downloads</a></li>
+					<li id="downloads-link"><a href="/intro/index.php/downloads">Downloads</a></li>
 					<li id="help-link"><a href="/help-frontoffice/" target="_blank">Help</a></li>
 				</ul>
 				<div class="user">
