--- a/src/index.html
+++ b/src/index.html
@@ -171,9 +171,9 @@
 				<a href="http://www.worldbank.org/"><span>The World Bank</span></a>
 			</div>
 			<div id="header">
-				<a href="/" class="home" id="home-link"><span>Home</span></a>
+				<h1>Data exploration</h1>
 				<ul class="menu">
-					<li id="data-exploration-link"><a href="/tool" class="active">Data exploration</a></li>
+					<li id="intro-link"><a href="/">Introduction</a></li>
 					<li id="downloads-link"><a href="/intro/index.php/downloads">Downloads</a></li>
 					<li id="help-link"><a href="/help-frontoffice/" target="_blank">Help</a></li>
 				</ul>
