1703: Header: Move BO link to menu

--- a/src/index.html
+++ b/src/index.html
@@ -176,12 +176,12 @@
 					<li id="intro-link"><a href="/">Introduction</a></li>
 					<li id="downloads-link"><a href="/intro/index.php/downloads">Downloads</a></li>
 					<li id="help-link"><a href="/help-frontoffice/" target="_blank">Help</a></li>
+					<li id="bo-link" style="display:none;"><a href="/backoffice/" target="_blank">Administration</a></li>
 				</ul>
 				<div class="user">
 					<a href="#" class="login">LOG IN</a>
 					<span class="sep"></span>
 					<a href="#" class="signup">SIGN UP</a>
-					<a href="#" target="_blank" style="display:none;" class="administration">Administration</a>
 				</div>
 			</div>
 			<div id="content">
