1703: new view selector: start

--- a/src/index.html
+++ b/src/index.html
@@ -357,6 +357,34 @@
 					</div>
 				</div>
 				<div id="content-application">
+					<div id="view-selector">
+						<div class="group group-scope">
+							<div class="field scope">
+								<div class="label">Scope</div>
+								<div id="app-view-selector-scope" class="widget"></div>
+							</div>
+							<div class="field place">
+								<div class="label">Place</div>
+								<div id="app-view-selector-place" class="widget"></div>
+							</div>
+							<div class="field theme">
+								<div class="label">Theme</div>
+								<div id="app-view-selector-theme" class="widget"></div>
+							</div>
+						</div>
+						<div class="group group-visualization">
+							<div class="field visualization">
+								<div class="label">Visualization</div>
+								<div id="app-view-selector-visualization" class="widget"></div>
+								<div id="app-view-selector-visualization-save" class="widget"></div>
+								<div id="app-view-selector-visualization-manage" class="widget"></div>
+							</div>
+							<div class="field with-sep period">
+								<div class="label">Year (+/-)</div>
+								<div id="app-view-selector-period" class="widget"></div>
+							</div>
+						</div>
+					</div>
 					<div id="toolbar" class="fields-holder">
 						<div class="label">Data Exploration</div>
 						<div class="fields">
