1703: Rename #toolbar > #legacy-view-selector

--- a/src/index.html
+++ b/src/index.html
@@ -385,7 +385,7 @@
 							</div>
 						</div>
 					</div>
-					<div id="toolbar" class="fields-holder">
+					<div id="legacy-view-selector" class="fields-holder">
 						<div class="label">Data Exploration</div>
 						<div class="fields">
 							<div class="group group-scope">
