1703: Rename #toolbar > #legacy-view-selector 2: children + fix "teritory" -> place

--- a/src/index.html
+++ b/src/index.html
@@ -197,9 +197,9 @@
 								<div class="label">Scope</div>
 								<div id="app-intro-scope" class="widget"></div>
 							</div>
-							<div class="field teritory">
+							<div class="field place">
 								<div class="label">Place</div>
-								<div id="app-intro-teritory" class="widget"></div>
+								<div id="app-intro-place" class="widget"></div>
 							</div>
 						</div>
 						<div class="group">
@@ -391,39 +391,39 @@
 							<div class="group group-scope">
 								<div class="field scope">
 									<div class="label">Scope</div>
-									<div id="app-toolbar-scope" class="widget"></div>
+									<div id="app-legacy-view-selector-scope" class="widget"></div>
 								</div>
-								<div class="field teritory">
+								<div class="field place">
 									<div class="label">Place</div>
-									<div id="app-toolbar-teritory" class="widget"></div>
+									<div id="app-legacy-view-selector-place" class="widget"></div>
 								</div>
 								<div class="field theme">
 									<div class="label">Theme</div>
-									<div id="app-toolbar-theme" class="widget"></div>
+									<div id="app-legacy-view-selector-theme" class="widget"></div>
 								</div>
 							</div>
 							<div class="group group-visualization">
 								<div class="field visualization">
 									<div class="label">Visualization</div>
-									<div id="app-toolbar-visualization" class="widget"></div>
-									<div id="app-toolbar-visualization-save" class="widget"></div>
-									<div id="app-toolbar-visualization-manage" class="widget"></div>
+									<div id="app-legacy-view-selector-visualization" class="widget"></div>
+									<div id="app-legacy-view-selector-visualization-save" class="widget"></div>
+									<div id="app-legacy-view-selector-visualization-manage" class="widget"></div>
 								</div>
 								<div class="field with-sep level">
 									<div class="label">Analysis level</div>
-									<div id="app-toolbar-level" class="widget">
-										<div id="app-toolbar-level-less" class="button"></div>
-										<div id="app-toolbar-level-more" class="button"></div>
+									<div id="app-legacy-view-selector-level" class="widget">
+										<div id="app-legacy-view-selector-level-less" class="button"></div>
+										<div id="app-legacy-view-selector-level-more" class="button"></div>
 									</div>
 									<div class="label help-label">Help</div>
-									<div class="widget app-toolbar-help">
-										<div id="app-toolbar-contexthelp" class="help-btn"></div>
-										<div id="app-toolbar-webhelp" class="help-btn"></div>
+									<div class="widget app-legacy-view-selector-help">
+										<div id="app-legacy-view-selector-contexthelp" class="help-btn"></div>
+										<div id="app-legacy-view-selector-webhelp" class="help-btn"></div>
 									</div>
 								</div>
 								<div class="field with-sep year">
 									<div class="label">Year (+/-)</div>
-									<div id="app-toolbar-year" class="widget"></div>
+									<div id="app-legacy-view-selector-year" class="widget"></div>
 								</div>
 							</div>
 						</div>
@@ -434,9 +434,9 @@
 						<div id="tools-container">
 						</div>
 						<div class="dataview field">
-							<div id="app-toolbar-share" class="widget"></div>
-							<div id="app-toolbar-save" class="widget"></div>
-							<div id="app-toolbar-manage" class="widget"></div>
+							<div id="app-legacy-view-selector-share" class="widget"></div>
+							<div id="app-legacy-view-selector-save" class="widget"></div>
+							<div id="app-legacy-view-selector-manage" class="widget"></div>
 						</div>
 					</div>
 					<div id="sidebar-tools">
