1703: Top toolbar added + toggle combinations

--- a/src/index.html
+++ b/src/index.html
@@ -439,6 +439,10 @@
 							<div id="app-legacy-view-selector-manage" class="widget"></div>
 						</div>
 					</div>
+					<div id="top-toolbar">
+						<div id="top-toolbar-widgets"></div>
+						<div id="top-toolbar-tools"></div>
+					</div>
 					<div id="sidebar-tools">
 						<span id="sidebar-tools-toggle" title="Tools"></span>
 						<div id="app-tools-actions"></div>
