feature info window moved to #main

--- a/src/index.html
+++ b/src/index.html
@@ -433,8 +433,6 @@
 							<div class="placeholders-container">
 							</div>
 						</div>
-						<div id="tools-container">
-						</div>
 						<div class="dataview field">
 							<div id="app-legacy-view-selector-share" class="widget"></div>
 							<div id="app-legacy-view-selector-save" class="widget"></div>
@@ -442,7 +440,9 @@
 						</div>
 					</div>
 					<div id="top-toolbar">
-						<div id="top-toolbar-widgets"></div>
+						<div id="top-toolbar-widgets">
+							<div id="icon-3d-map">3D Map</div>
+						</div>
 						<div id="top-toolbar-tools"></div>
 					</div>
 					<div id="sidebar-tools">
