--- a/src/index.html
+++ b/src/index.html
@@ -440,7 +440,10 @@
 						</div>
 					</div>
 					<div id="top-toolbar">
-						<div id="top-toolbar-widgets"></div>
+						<div id="top-toolbar-features">
+							<div class="item" id="top-toolbar-3dmap">3D Map</div>
+							<div id="top-toolbar-widgets"></div>
+						</div>
 						<div id="top-toolbar-tools"></div>
 					</div>
 					<div id="sidebar-tools">
