--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="extjs-4.1.3/resources/css/ext-all-gray.css">
 		<link rel="stylesheet" type="text/css" href="css/ux/colorpicker.css">
 		<link rel="stylesheet" type="text/css" href="extjs-4.1.3/examples/ux/css/CheckHeader.css">
+		<link rel="stylesheet" href="__new/styles/font-awesome.min.css">
 
 		<link rel="stylesheet" type="text/css" href="css/app.css">
 		<link rel="stylesheet" type="text/css" href="css/toggles.css">
