1703: Top toolbar icons

--- a/src/index.html
+++ b/src/index.html
@@ -447,7 +447,11 @@
 							<div class="item" id="top-toolbar-3dmap">3D Map</div>
 							<div id="top-toolbar-widgets"></div>
 						</div>
-						<div id="top-toolbar-tools"></div>
+						<div id="top-toolbar-tools">
+							<div class="item" id="top-toolbar-snapshot" title="Take map snapshot"></div>
+							<div class="item" id="top-toolbar-share-view" title="Share view"></div>
+							<div class="item" id="top-toolbar-context-help" title="Context help"></div>
+						</div>
 					</div>
 					<div id="sidebar-tools">
 						<span id="sidebar-tools-toggle" title="Tools"></span>
