1703: Compare periods button

--- a/src/index.html
+++ b/src/index.html
@@ -386,6 +386,7 @@
 							<div class="field with-sep period">
 								<div class="label">Year (+/-)</div>
 								<div id="app-view-selector-period" class="widget"></div>
+								<div id="app-view-selector-period-compare" class="widget"></div>
 							</div>
 						</div>
 					</div>
