Replace app & data loader

--- a/src/index.html
+++ b/src/index.html
@@ -488,16 +488,11 @@
 		<div id="loading-screen">
 			<div id="loading-screen-content-wrap">
 				<div id="loading-screen-content">
-					<div class="sk-cube-grid">
-						<div class="sk-cube sk-cube1"></div>
-						<div class="sk-cube sk-cube2"></div>
-						<div class="sk-cube sk-cube3"></div>
-						<div class="sk-cube sk-cube4"></div>
-						<div class="sk-cube sk-cube5"></div>
-						<div class="sk-cube sk-cube6"></div>
-						<div class="sk-cube sk-cube7"></div>
-						<div class="sk-cube sk-cube8"></div>
-						<div class="sk-cube sk-cube9"></div>
+					<div class="a-loader-container">
+						<i class="i1"></i>
+						<i class="i2"></i>
+						<i class="i3"></i>
+						<i class="i4"></i>
 					</div>
 				</div>
 			</div>
