Snow Portal: iframe will be here

--- a/src/index.html
+++ b/src/index.html
@@ -464,6 +464,7 @@
 						<span id="sidebar-reports-add"></span>
 						<div id="app-reports-paging"></div>
 						<div id="app-reports-accordeon"></div>
+						<div id="app-extra-content"></div>
 					</div>
 				</div>
 			</div>
