Snow Portal: project CSS link

--- a/src/index.html
+++ b/src/index.html
@@ -130,6 +130,9 @@
 			if(Config.toggles.isEea){
 				createLink("css/project/eea.css");
 			}
+			if(Config.toggles.isSnow){
+				createLink("css/project/snow.css");
+			}
 			if(Config.toggles.hasOwnProperty("isMelodies") && Config.toggles.isMelodies){
 				createLink("css/project/melodies.css");
 			}
