Move update to the view to earlier.

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" type="text/css" href="extjs-4.1.3/examples/ux/css/CheckHeader.css">
 
 		<link rel="stylesheet" type="text/css" href="css/app.css">
+		<link rel="stylesheet" type="text/css" href="__new/styles/urban-tep.css">
 		<link rel="stylesheet" type="text/css" href="css/toggles.css">
 		<link rel="stylesheet" type="text/css" href="css/extjs-puma.css">
 		<link rel="stylesheet" type="text/css" href="css/layout.css">
