--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,6 @@
 		<link rel="stylesheet" type="text/css" href="extjs-4.1.3/examples/ux/css/CheckHeader.css">
 
 		<link rel="stylesheet" type="text/css" href="css/app.css">
-		<link rel="stylesheet" type="text/css" href="__new/styles/urban-tep.css">
 		<link rel="stylesheet" type="text/css" href="css/toggles.css">
 		<link rel="stylesheet" type="text/css" href="css/extjs-puma.css">
 		<link rel="stylesheet" type="text/css" href="css/layout.css">
@@ -130,6 +129,9 @@
 			}
 			if(Config.toggles.isEea){
 				createLink("css/project/eea.css");
+			}
+			if(Config.toggles.isUrbanTep){
+				createLink("__new/styles/urban-tep.css");
 			}
 			if(Config.toggles.hasOwnProperty("isMelodies") && Config.toggles.isMelodies){
 				createLink("css/project/melodies.css");
