Snow iframe test: OpenLayers map object

--- a/src/iframe-test.html
+++ b/src/iframe-test.html
@@ -5,8 +5,8 @@
 	<title>Title</title>
 </head>
 <body>
-	<div class="ptr-scenes-scene" data-id="1030">Scene 1030</div>
-	<div class="ptr-scenes-scene" data-id="1054">Scene 1054</div>
-	<div class="ptr-scenes-scene" data-id="1403">Scene 1403</div>
+	<div class="ptr-composites-composite" data-id="composite_8a7cd01135d7071426d598235599795daa6e8950">Composite 1</div>
+	<div class="ptr-composites-composite" data-id="composite_bcc105d151bf417e8b906c1c78667e3b">Composite 2</div>
+	<div class="ptr-composites-composite" data-id="composite_04248f70092fc52c2584b9bbbb32eefab89d2388">Composite 3</div>
 </body>
 </html>
