Snow iframe: map test

--- a/src/iframe-test.html
+++ b/src/iframe-test.html
@@ -5,7 +5,7 @@
 	<title>Title</title>
 </head>
 <body>
-	<div class="ptr-composites-composite" data-id="composite_8a7cd01135d7071426d598235599795daa6e8950">Composite 1</div>
+	<div class="ptr-composites-composite" data-id="composite_e12c6e1f824846d88487df9037c8237d">Reprojected composite</div>
 	<div class="ptr-composites-composite" data-id="composite_bcc105d151bf417e8b906c1c78667e3b">Composite 2</div>
 	<div class="ptr-composites-composite" data-id="composite_04248f70092fc52c2584b9bbbb32eefab89d2388">Composite 3</div>
 </body>
