--- a/src/iframe-test.html
+++ b/src/iframe-test.html
@@ -7,6 +7,6 @@
 <body>
 	<div class="ptr-composites-composite" data-id="composite_e12c6e1f824846d88487df9037c8237d">Composite 1</div>
 	<div class="ptr-composites-composite" data-id="composite_bcc105d151bf417e8b906c1c78667e3b">Composite 2</div>
-	<div class="ptr-composites-composite" data-id="composite_04248f70092fc52c2584b9bbbb32eefab89d2388">Composite 3</div>
+	<div class="ptr-composites-composite" data-id="popmap10">Popmap</div>
 </body>
 </html>
