Show selected country in map

--- a/src/iframe-test.html
+++ b/src/iframe-test.html
@@ -4,9 +4,17 @@
 	<meta charset="UTF-8">
 	<title>Title</title>
 </head>
-<body>
-	<div class="ptr-composites-composite" data-id="composite_e12c6e1f824846d88487df9037c8237d">Composite 1</div>
-	<div class="ptr-composites-composite" data-id="composite_bcc105d151bf417e8b906c1c78667e3b">Composite 2</div>
-	<div class="ptr-composites-composite" data-id="popmap10">Popmap</div>
+<body data-location="sweden">
+	<div class="ptr-composites-composite" data-id="composite_c611614e0aee493d93484acbdfac4c04">
+		<div class="ptr-composites-composite-controls">
+			<div class="ptr-button">Composite 1</div>
+		</div>
+	</div>
+	<div class="ptr-composites-composite" data-id="composite_4e0f7cac2fc843a296f8f1302bf538cd">
+		<div class="ptr-composites-composite-controls">
+			<div class="ptr-button">Composite 2</div>
+		</div>
+	</div>
+
 </body>
 </html>
