--- a/src/iframe-test.html
+++ b/src/iframe-test.html
@@ -4,17 +4,18 @@
 	<meta charset="UTF-8">
 	<title>Title</title>
 </head>
-<body data-location="sweden">
-	<div class="ptr-composites-composite" data-id="composite_c611614e0aee493d93484acbdfac4c04">
-		<div class="ptr-composites-composite-controls">
-			<div class="ptr-button">Composite 1</div>
+<body>
+	<div id="viewport" data-country="sweden">
+		<div class="ptr-composites-composite" data-id="composite_c611614e0aee493d93484acbdfac4c04">
+			<div class="ptr-composites-composite-controls">
+				<div class="ptr-button">Composite 1</div>
+			</div>
+		</div>
+		<div class="ptr-composites-composite" data-id="composite_4e0f7cac2fc843a296f8f1302bf538cd">
+			<div class="ptr-composites-composite-controls">
+				<div class="ptr-button">Composite 2</div>
+			</div>
 		</div>
 	</div>
-	<div class="ptr-composites-composite" data-id="composite_4e0f7cac2fc843a296f8f1302bf538cd">
-		<div class="ptr-composites-composite-controls">
-			<div class="ptr-button">Composite 2</div>
-		</div>
-	</div>
-
 </body>
 </html>
