--- a/src/index.html
+++ b/src/index.html
@@ -191,6 +191,7 @@
 				</div>
 			</div>
 			<div id="content">
+				<button id="add-map" style="position: absolute; top: 50px; right: 10px; z-index: 55555;">Add map</button>
 				<div id="map-holder">
 					<div class="map" id="app-map"><div id="app-map-map-label" class="map-label">1</div><img src="images/cursor_all.png" class="cursor" style="visibility:hidden"></div>
 					<div class="map" id="app-map2"><div id="app-map-map2-label" class="map-label">2</div><img src="images/cursor_all.png" class="cursor" style="visibility:hidden"></div>
