MultipleMaps#Periods selector component

--- a/src/index.html
+++ b/src/index.html
@@ -111,14 +111,16 @@
 				});
 			}
 			// load project styles depending on the toggles
-			if((Config.toggles.hasOwnProperty("hasNewEvaluationTool") && Config.toggles.hasNewEvaluationTool) ||
-					(Config.toggles.hasOwnProperty("hasNewFeatureInfo") && Config.toggles.hasNewFeatureInfo) ||
-					(Config.toggles.hasOwnProperty("hasNew3Dmap") && Config.toggles.hasNew3Dmap) ||
-					(Config.toggles.hasOwnProperty("isMelodies") && Config.toggles.isMelodies))
+			if(Config.toggles.hasNewEvaluationTool ||
+					Config.toggles.hasNewFeatureInfo ||
+					Config.toggles.hasNew3Dmap ||
+					Config.toggles.isMelodies
+			)
 			{
 				createLink("__new/styles/font-awesome.min.css");
 				createLink("__new/styles/jquery-ui.css");
 				createLink("__new/styles/style.css");
+				createLink("__new/styles/select2.min.css");
 			}
 			if(Config.toggles.isNewDesign){
 				createLink("css/newDesign.css");
