Snow#tour setup

--- a/src/index.html
+++ b/src/index.html
@@ -120,6 +120,7 @@
 			}
 			if(Config.toggles.isSnow){
 				createLink("css/project/snow.css");
+				createLink("__new/styles/jquery-tourbus.css");
 			}
 			if(Config.toggles.hasOwnProperty("isMelodies") && Config.toggles.isMelodies){
 				createLink("css/project/melodies.css");
