--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,10 @@
 				}).then(function(){
 					return createScript('extjs-4.1.3/ext-debug.js');
 				}).then(function(){
+					if (!Config.toggles.isSnow){
+						return createScript('//maps.google.com/maps/api/js?key=AIzaSyAxGvK1UL21TTafsDGd4p3kiHo-hVBlEKE&v=3.2&sensor=false');
+					}
+				}).then(function(){
 					return createScript('appde.js');
 				}).then(function(){
 					return createScript('__new/lib/require.js', '__new/app.js');
@@ -81,6 +85,10 @@
 			} else {
 				createScript('lib/OpenLayers.min.js').then(function(){
 					return createScript('extjs-4.1.3/ext.js');
+				}).then(function(){
+					if (!Config.toggles.isSnow){
+						return createScript('//maps.google.com/maps/api/js?key=AIzaSyAxGvK1UL21TTafsDGd4p3kiHo-hVBlEKE&v=3.2&sensor=false');
+					}
 				}).then(function(){
 					return createScript('appde.all.js');
 				}).then(function(){
@@ -127,9 +135,6 @@
 				createLink("css/project/melodies.css");
 			}
 		</script>
-
-		<script type="text/javascript"
-				src="//maps.google.com/maps/api/js?key=AIzaSyAxGvK1UL21TTafsDGd4p3kiHo-hVBlEKE&v=3.2&sensor=false"></script>
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 		<script src="lib/Highcharts-3.0.0/js/highcharts.src.js"></script>
