--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,9 @@
 			}
 			var configuration = Config.environment;
 			if (configuration === 'development') {
-				createScript('lib/OpenLayers.min.js').then(function(){
+				createScript('//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js').then(function(){
+					return createScript('lib/OpenLayers.min.js')
+				}).then(function(){
 					return createScript('gisatlib/OpenLayers/Geoserver23.js');
 				}).then(function(){
 					return createScript('extjs-4.1.3/ext-debug.js');
@@ -84,7 +86,9 @@
 					}
 				});
 			} else {
-				createScript('lib/OpenLayers.min.js').then(function(){
+				createScript('//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js').then(function(){
+					return createScript('lib/OpenLayers.min.js');
+				}).then(function(){
 					return createScript('extjs-4.1.3/ext.js');
 				}).then(function(){
 					if (!Config.toggles.isSnow){
@@ -137,7 +141,6 @@
 			}
 		</script>
 
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 		<script src="lib/Highcharts-3.0.0/js/highcharts.src.js"></script>
 		<script src="lib/Highcharts-3.0.0/js/highcharts-more.js"></script>
 		<script src="lib/Highcharts-3.0.0/js/modules/exporting.js"></script>
