English texts extracted from the old part of the application.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
 		<script type="text/javascript" src="observer.js"></script>
 		<script type="text/javascript" src="exchangeParams.js"></script>
 		<script type="text/javascript" src="lib/es6-promise.js"></script>
+
+		<script type="text/javascript" src="lib/polyglot.js"></script>
+		<script type="text/javascript" src="localization.js"></script>
+
 		<script type="text/javascript" src="index.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
